# docs/swagger.json
@@ -56,6 +56,47 @@
                 },
                 "type": "object"
             },
+            "github_com_domicileapp_domicile_internal_db.ListRecipesRow": {
+                "properties": {
+                    "cook_time": {
+                        "type": "string"
+                    },
+                    "created_at": {
+                        "type": "string"
+                    },
+                    "id": {
+                        "type": "integer"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "notes": {
+                        "type": "string"
+                    },
+                    "nutrition": {
+                        "type": "string"
+                    },
+                    "photo_url": {
+                        "type": "string"
+                    },
+                    "prep_time": {
+                        "type": "string"
+                    },
+                    "servings": {
+                        "type": "string"
+                    },
+                    "short_description": {
+                        "type": "string"
+                    },
+                    "source": {
+                        "type": "string"
+                    },
+                    "updated_at": {
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
             "github_com_domicileapp_domicile_internal_db.Recipe": {
                 "properties": {
                     "cook_time": {
@@ -166,6 +207,30 @@
                     },
                     "updated_at": {
                         "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "recipes.PaginatedResponse": {
+                "properties": {
+                    "items": {
+                        "items": {
+                            "$ref": "#/components/schemas/github_com_domicileapp_domicile_internal_db.ListRecipesRow"
+                        },
+                        "type": "array",
+                        "uniqueItems": false
+                    },
+                    "page": {
+                        "type": "integer"
+                    },
+                    "size": {
+                        "type": "integer"
+                    },
+                    "total_items": {
+                        "type": "integer"
+                    },
+                    "total_pages": {
+                        "type": "integer"
                     }
                 },
                 "type": "object"
@@ -338,6 +403,30 @@
                         "schema": {
                             "type": "integer"
                         }
+                    },
+                    {
+                        "description": "Search params",
+                        "in": "query",
+                        "name": "search",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "Sort field",
+                        "in": "query",
+                        "name": "sort",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "Sort direction",
+                        "in": "query",
+                        "name": "direction",
+                        "schema": {
+                            "type": "integer"
+                        }
                     }
                 ],
                 "requestBody": {
@@ -354,10 +443,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "items": {
-                                        "$ref": "#/components/schemas/github_com_domicileapp_domicile_internal_db.Recipe"
-                                    },
-                                    "type": "array"
+                                    "$ref": "#/components/schemas/recipes.PaginatedResponse"
                                 }
                             }
                         },
